--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#"> Главная </a>
+                <a href="#"> Главная лоамловамалом</a>
               </li>
               <li class="menu__item">
                 <a href="#"> Наши проекты </a>
